--- a/index.html
+++ b/index.html
@@ -360,7 +360,6 @@
 <!--./reviews-section-->
 
 <!--Contact Section-->
-    <!--Code copied from -->
 <section id="contact">
     <div class="container-wrapper-contact">
         <div class="container">
@@ -371,45 +370,49 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 m-auto">
                     <div class="contact-form">
-                        <form action="/examples/actions/confirmation.php" method="post">
+                        <form action="" method="post">
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="inputName">Name</label>
-                                        <input type="text" class="form-control" id="inputName" required="">
+                                        <input type="text" class="form-control" id="inputName" placeholder="Name" required />
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="inputEmail">Email</label>
-                                        <input type="email" class="form-control" id="inputEmail" required="">
+                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email" required />
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputSubject">Subject</label>
-                                <input type="text" class="form-control" id="inputSubject" required="">
+                                <input type="text" class="form-control" id="inputSubject" placeholder="Subject" required />
                             </div>
                             <div class="form-group">
-                                <label for="inputMessage">Message</label>
-                                <textarea class="form-control" id="inputMessage" rows="5" required=""></textarea>
+                                <label for="inputMessage">Comments</label>
+                                <textarea class="form-control" id="inputMessage" rows="5" placeholder="Comments" required>
+                                </textarea>
                             </div>
                             <div class="text-center">
-                                <p style="margin-top: 40px; margin-bottom: 0px;">
-                                    <a type="submit" class="btn btn-info btn-lg"><i class="fa fa-paper-plane"></i>
-                                        Send</a>
+                                <p style="margin-top: 30px; margin-bottom: 0px;">
+                                    <a id="send" class="btn btn-info btn-md" href="#contact" type="submit">
+                                        <i class="fa fa-paper-plane"></i> 
+                                        Send
+                                    </a>
                                 </p>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-
             <div class="row">
-                <div class="col-xs-6 col-md-offset-2 m-auto">
-                    <ul class="nav-list justify-content-center">
+                <div class="col-12">
+                    <ul class="nav justify-content-center">
                         <li id="contact-info">
-                            <a><i class="fas fa-map-marker-alt"></i> <span>14 Allen St, NYC</span></a>
+                            <a><i class="fas fa-map-marker-alt"></i> 
+                                <span>14 Allen St, NYC</span>
+                            </a>
                         </li>
           
                         <li id="contact-info">
@@ -424,12 +427,14 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-xs-6 col-md-offset-2 m-auto">
-                    <ul class="nav-list justify-content-center" style="list-style: none;">
-                        <li id="hours"><p id="contac-info">Open Monday - Friday </p></li>
-                        <li id="hours"><p id="contac-info">  9:00am - 7:00pm</p></li>
-                        <li id="hours" ><p id="contac-info"> Closed most weekends</p></li>
-                   </ul> 
+            </div>
+            <div class="row text-center">
+                <div class="col-12">
+                    <div class="list-group" style="margin-top: 20px;">
+                        <p id="contac-info">Open Monday - Friday </p>
+                        <p id="contac-info">  9:00am - 7:00pm</p>
+                        <p id="contac-info"> Closed most weekends</p>
+                    </div>
                 </div>
         </div>
     </div>
