Repaired error in customer review card

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <img src="assets/images/quotes2.png" alt="headshot of happy female infinity member" class="rounded-circle img-fluid">
                         </div>
                         <!--Card Body-->
-                        <div class="card-bbody">
+                        <div class="card-body">
                             <h4 class="card-title mt-1">Sara Solar</h4>
                             <hr>
                             <!--Blockquote-->
