--- a/index.html
+++ b/index.html
@@ -390,26 +390,29 @@
                     </div>
                 <div class="col-md-8 col-md-offset-2 m-auto">
                     <div class="contact-form">
-                        <form action="/examples/actions/confirmation.php" method="post">
-                            <div class="row">
-                                <div class="col-sm-6">
-
-                                    <div class="form-group">
-                                        <label for="inputName">Name</label>
-                                        <input type="text" class="form-control" id="inputName" required="">
-                                    </div>
+                        <form>
+                            <div class="row text-left">
+                          <!--First Name-->
+                            <!-- Last Name -->
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label for="inputlastName">Name</label>
+                                    <input type="text" class="form-control" id="inputlastName" placeholder="Name" required />
                                 </div>
+                            </div> 
+                            <!--Email-->
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label for="inputEmail">Email</label>
-                                        <input type="email" class="form-control" id="inputEmail" required="">
+                                        <input type="email" class="form-control" placeholder="Email" id="inputEmail" required />
                                     </div>
                                 </div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group text-left">
                                 <label for="inputMessage">Message</label>
-                                <textarea class="form-control" id="inputMessage" rows="5" required=""></textarea>
-                            </div>
+                                <textarea class="form-control" placeholder="Your Message" id="inputMessage" rows="5" required>
+                            </textarea>
+                         
                             <div class="row justify-content-center text-center">
                                 <a class="btn btn-info btn-md" style="margin-top:20px; font-style: italic; float: right;" type="submit">Send</a>
                               </div>
