--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#myPage">Home<span class="sr-only">(current)</span>
+                    <a class="nav-link" href="index.html">Home
+                        <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -54,22 +55,22 @@
             <!--Social Media Links-->
             <ul class="nav navbar-right ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="https://www.twitter.com" target="_blank">
+                    <a class="nav-link" href="https://www.twitter.com" target="_blank">
                         <i class="fab fa-twitter-square"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="https://www.facebook.com" target="_blank">
+                    <a class="nav-link" href="https://www.facebook.com" target="_blank">
                         <i class="fab fa-facebook-square"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="https://www.instagram.com" target="_blank">
+                    <a class="nav-link" href="https://www.instagram.com" target="_blank">
                         <i class="fab fa-instagram-square"></i>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-effect waves-light" href="https://www.pinterest.com" target="_blank">
+                    <a class="nav-link" href="https://www.pinterest.com" target="_blank">
                         <i class="fab fa-pinterest"></i>
                     </a>
                 </li>
@@ -211,8 +212,7 @@
                                 <p>Flow through a sequence of Sun Salutations and standing postures, linking
                                     breath and movement as you improve strength and flexibility.</p>
                                 <div class="signUp">
-                                    <a class="nav-item" href="#signUpModal" data-toggle="modal"
-                                        data-target="#signUpModal">Sign Up
+                                    <a class="signup" href="#contact">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect x='0' y='0' fill='none' width='130' height='65' />
@@ -237,8 +237,7 @@
                                 <p>Using the support of blankets, bolsters and other props, experience a
                                     complete relaxation of body, mind and soul as you heal within.</p>
                                 <div class="signUp">
-                                    <a class="nav-item" href="#signUpModal2" data-toggle="modal"
-                                        data-target="#signUpModal2">Sign Up
+                                    <a class="signup" href="#contact">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect x='0' y='0' fill='none' width='130' height='65' />
@@ -263,8 +262,7 @@
                                 <p>Cleanse your Chakras and heal from within as an instructor walks you through a series of breathing techniques followed by a guided meditation.
                                 </p>
                                 <div class="signUp">
-                                    <a class="nav-item" href="#signUpModal3" data-toggle="modal"
-                                        data-target="#signUpModal3">Sign Up
+                                    <a class="signup" href="#contact">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect x='0' y='0' fill='none' width='130' height='65' />
@@ -361,70 +359,93 @@
 </div>
 <!--./reviews-section-->
 
-<!--Contact Section-->
-<section id="contact">
-    <div class="container-wrapper-contact">
-        <div class="container">
-            <h2>Contact Us</h2>
+
+<!--Contact Container-->
+<div class="container-wrapper-contact">
+    <!--Contact Section-->
+    <section id="contact">
+        <div class="container-fluid">
+            <h2 class="section-header">Contact Us</h2>
             <hr>
-            <p id="description">We'd love to hear from you. Drop us a line and we'll try to get back to you
-                as soon as possible!</p>
-                <div class="row justify-content-center text-center">
-                     <div class="col-xs-4">
-                        <ul class="nav-list justify-content-center" style="margin:30px 20px;">
-                            <li id="contact-info">
-                                <a><i class="fas fa-map-marker-alt"></i> 
-                                    <span class="contact">14 Allen St, NY, NY</span></a>
-                            </li>
-                            <li id="contact-info">
-                                <a>
-                                    <i class="fas fa-phone"></i>
-                                    <span>212.000.000</span></a>
-                            </li>
-                            <li id="contact-info">
-                                <a>
-                                    <i class="fas fa-envelope-open"></i> <span>owner@infinity.nyc</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                <div class="col-md-8 col-md-offset-2 m-auto">
-                    <div class="contact-form">
-                        <form>
-                            <div class="row text-left">
-                          <!--First Name-->
-                            <!-- Last Name -->
-                            <div class="col-sm-6">
-                                <div class="form-group">
-                                    <label for="inputlastName">Name</label>
-                                    <input type="text" class="form-control" id="inputlastName" placeholder="Name" required />
-                                </div>
-                            </div> 
-                            <!--Email-->
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label for="inputEmail">Email</label>
-                                        <input type="email" class="form-control" placeholder="Email" id="inputEmail" required />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group text-left">
-                                <label for="inputMessage">Message</label>
-                                <textarea class="form-control" placeholder="Your Message" id="inputMessage" rows="5" required>
-                            </textarea>
-                         
-                            <div class="row justify-content-center text-center">
-                                <a class="btn btn-info btn-md" style="margin-top:20px; font-style: italic; float: right;" type="submit">Send</a>
-                              </div>
-                            </div>
-                        </form>
-                    </div>
+            <p id="description">
+                We'd love to hear from you. Drop us a line and we'll try to get back to you as soon as
+                possible!
+            </p>
+            <div class="row justify-content-center text-justify">
+                <!--Contact Details-->
+                <div class="col-xs-4">
+                    <ul class="nav-list justify-content-center" style="padding: 0 20px;">
+                        <!--Address-->
+                        <li id="contact-info">
+                            <a href="https://goo.gl/maps/GCsGgcjKv2tg6coHA" target="_blank">
+                                <i class="fas fa-map-marker-alt" data-aos="zoom-in" data-aos-duration="1000"
+                                    data-aos-anchor-placement="center-bottom">
+                                </i>
+                            </a>
+                            <span class="contact">New York, New York</span>
+                        </li>
+                        <!--Phone number-->
+                        <li id="contact-info">
+                            <a href="https://www.google.com/gmail/about/" target="_blank">
+                                <i class="fas fa-phone" data-aos="zoom-in" data-aos-duration="1000"
+                                    data-aos-anchor-placement="center-bottom">
+                                </i>
+                            </a>
+                            <span class="contact">212.000.0000</span>
+                        </li>
+                        <!--Email-->
+                        <li id="contact-info">
+                            <a href="https://voice.google.com/about" target="_blank">
+                                <i class="fas fa-envelope-open" data-aos="zoom-in" data-aos-duration="1000"
+                                    data-aos-anchor-placement="center-bottom"></i>
+                            </a>
+                            <span class="contact">owner@infinty.nyc</span>
+                        </li>
+                    </ul>
                 </div>
+                <!--./contact-details-->
+
+                <!--Contact Form-->
+                <div class="col-md-8">
+                    <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net/"
+                        target="_blank">
+                        <!--Name-->
+                        <div class="form-group row">
+                            <label for="name" id="name">
+                                Name
+                            </label>
+                            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required />
+                        </div>
+                        <!--Email-->
+                        <div class="form-group row">
+                            <label for="contact-email" id="contact-email">
+                                Email
+                            </label>
+                            <input class="form-control" id="contact-email" name="contact-email" placeholder="Email"
+                                type="email" required />
+                        </div>
+                        <!--Comments-->
+                        <div class="form-group row">
+                            <label for="comments" id="comments">Comments</label>
+                            <textarea class="form-control" id="comments" name="comments" placeholder="Comments"
+                                rows="5">
+                    </textarea>
+                        </div>
+                        <!--Submit Button-->
+                        <div class="form-group row justify-content-center text-center">
+                            <button class="btn btn-info float-right" style="margin-top:20px; font-style: italic;"
+                                type="submit">
+                                Send
+                            </button>
+                        </div>
+                    </form>
+                </div>
+                <!--./contact-form-->
             </div>
         </div>
-    </div>
-</section>
-<!--./contact-section-->
+    </section>
+    <!--./contact-->
+</div>
 
 </main>
 <!--./main-->
