--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!--Bootstrap Scripts-->
+    <!--jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+        </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+        </script>
+        <!--./bootstrap-scripts-->
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" />
     <!--Import Futura from Adobe Fonts-->
@@ -25,7 +37,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light bg-shadow fixed-top">
         <a class="navbar-brand" href="#myPage">
-            <i class="fas fa-infinity"></i> 
+            <i class="fas fa-infinity"></i>
             Infinity
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -49,7 +61,7 @@
                     <a class="nav-link" href="#reviews">Reviews</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#contact-section">Contact</a>
                 </li>
             </ul>
             <!--Social Media Links-->
@@ -212,7 +224,7 @@
                                 <p>Flow through a sequence of Sun Salutations and standing postures, linking
                                     breath and movement as you improve strength and flexibility.</p>
                                 <div class="signUp">
-                                    <a class="signup" href="#contact">Sign Up
+                                    <a class="signup" href="#contact-section">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect x='0' y='0' fill='none' width='130' height='65' />
@@ -237,7 +249,7 @@
                                 <p>Using the support of blankets, bolsters and other props, experience a
                                     complete relaxation of body, mind and soul as you heal within.</p>
                                 <div class="signUp">
-                                    <a class="signup" href="#contact">Sign Up
+                                    <a class="signup" href="#contact-section">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect x='0' y='0' fill='none' width='130' height='65' />
@@ -262,7 +274,7 @@
                                 <p>Cleanse your Chakras and heal from within as an instructor walks you through a series of breathing techniques followed by a guided meditation.
                                 </p>
                                 <div class="signUp">
-                                    <a class="signup" href="#contact">Sign Up
+                                    <a class="signup" href="#contact-section">Sign Up
                                         <svg width="130" height="65" viewBox="0 0 130 65"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <rect x='0' y='0' fill='none' width='130' height='65' />
@@ -363,7 +375,7 @@
 <!--Contact Container-->
 <div class="container-wrapper-contact">
     <!--Contact Section-->
-    <section id="contact">
+    <section id="contact-section">
         <div class="container-fluid">
             <h2 class="section-header">Contact Us</h2>
             <hr>
@@ -462,19 +474,6 @@
     </div>
 </footer>
 <!--./footer-->
-
-<!--Bootstrap Scripts-->
-    <!--jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
-<!--./bootstrap-scripts-->
     
 <!--Responsive Navbar-->
 <script>
