Repaired navigation error

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1 class="display-3">Infinity</h1>
-                    <h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation Studio</h2>
+                    <h2 class="lead" style="color:#f2f2f2;">Yoga and Meditation</h2>
                     <p><a class="btn btn-info btn-lg" href="#schedule" role="button" >Schedule &raquo;</a></p>
                 </div>
             </div>
@@ -437,9 +437,7 @@
                         <!--Comments-->
                         <div class="form-group row">
                             <label for="comments" id="comments">Comments</label>
-                            <textarea class="form-control" id="comments" name="comments" placeholder="Comments"
-                                rows="5">
-                    </textarea>
+                            <textarea class="form-control" id="comments" placeholder="Comments" rows="5" required></textarea>
                         </div>
                         <!--Submit Button-->
                         <div class="form-group row justify-content-center text-center">
@@ -522,22 +520,22 @@
         <div class="row">
             <div class="col-12">
                 <ul class="nav justify-content-center">
-                    <li class="nav-item">
+                    <li class="social">
                         <a class="footer-socials" href="https://www.twitter.com" target="_blank">
                             <i class="fab fa-twitter-square" id="twitter"></i>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="social">
                         <a class="footer-socials" href="https://www.facebook.com" target="_blank">
                             <i class="fab fa-facebook-square" id="facebook"></i>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="social">
                         <a class="footer-socials" href="https://www.instagram.com" target="_blank">
                             <i class="fab fa-instagram-square" id="instagram"></i>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="social">
                         <a class="footer-socials" href="https://www.pinterest.com" target="_blank">
                             <i class="fab fa-pinterest" id="pinterest"></i>
                         </a>
