Repaired merge conflict errors

--- a/index.html
+++ b/index.html
@@ -153,7 +153,6 @@
                             <p id="peace" class="collapse display-6 about-content">Our instructors will walk you through calm, stress-free meditations.
                             </p>
                         </div>
-                        <!--./why-infinity-container-->
                     </div>
                     <div class="col-xs-8 col-sm-4">
                         <div class="about">
@@ -172,13 +171,15 @@
                                 data-aos-anchor-placement="center-bottom">Harmony </h4>
                             <p id="harmony" class="collapse display-6 about-content">We want you to experience physical and emotional balance.</p>
                         </div>
-                        <!--./card-deck-->
                     </div>
+                    <!--./why-infinity-container-->
                 </div>
-            </section>
-            <!--./schedule-section-->
+            </div>
         </div>
-        <!--./schedule-container-->
+    </section>
+    <!--./about-section-->
+</div>
+<!--./about-container-->
 
 <!--Schedule Container-->
 <div class="container-wrapper-schedule">
@@ -207,7 +208,8 @@
                             </div>
                             <!--Card Body-->
                             <div class="card-body">
-                                <h4 class="card-title mt-1">Octavia Bliss</h4>
+                                <h4>Vinyasa Flow</h4>
+                                <p class="text-muted">Thursdays, 7:00pm | 90 minutes</p>
                                 <hr>
                                 <p>Flow through a sequence of Sun Salutations and standing postures, linking
                                     breath and movement as you improve strength and flexibility.</p>
@@ -231,7 +233,8 @@
                             </div>
                             <!--Card Body-->
                             <div class="card-body">
-                                <h4 class="card-title mt-1">Daniel Zen</h4>
+                                <h4 class="card-title mt-1">Restorative Yoga</h4>
+                                <p class="text-muted">Sundays, 11:00am | 60 minutes</p>
                                 <hr>
                                 <p>Using the support of blankets, bolsters and other props, experience a
                                     complete relaxation of body, mind and soul as you heal within.</p>
@@ -255,7 +258,8 @@
                             </div>
                             <!--Card Body-->
                             <div class="card-body">
-                                <h4 class="card-title mt-1">Sara Solar</h4>
+                                <h4 class="card-title mt-1">Chakra Cleansing</h4>
+                                <p class="text-muted">Mondays, 7:00pm | 90 minutes</p>
                                 <hr>
                                 <p>Cleanse your Chakras and heal from within as an instructor walks you through
                                     a series
@@ -274,8 +278,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <!--./quotes-->
+                <!--./card-deck-->
+            </div>
         </div>
     </section>
     <!--./schedule-section-->
@@ -452,6 +456,9 @@
 <!--./contact-->
 </div>
 
+</main>
+<!--./end main-page-content-->
+
 <!--Footer Section-->
 <footer>
     <!--Chevron Up-->
@@ -466,34 +473,23 @@
     </div>
     <!--./fas-fa-chevron-up-->
 
-            <!--Socials-->
-            <div class="row">
-                <div class="col-12">
-                    <ul class="nav justify-content-center">
-                        <li class="social">
-                            <a class="footer-socials" href="https://www.twitter.com" target="_blank">
-                                <i class="fab fa-twitter-square" id="twitter"></i>
-                            </a>
-                        </li>
-                        <li class="social">
-                            <a class="footer-socials" href="https://www.facebook.com" target="_blank">
-                                <i class="fab fa-facebook-square" id="facebook"></i>
-                            </a>
-                        </li>
-                        <li class="social">
-                            <a class="footer-socials" href="https://www.instagram.com" target="_blank">
-                                <i class="fab fa-instagram-square" id="instagram"></i>
-                            </a>
-                        </li>
-                        <li class="social">
-                            <a class="footer-socials" href="https://www.pinterest.com" target="_blank">
-                                <i class="fab fa-pinterest" id="pinterest"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+    <!--Navbar Brand-->
+    <div class="container">
+        <div class="row text-center align-items-center">
+            <div class="col-12">
+                <p> <i class="fas fa-infinity"></i>
+                    <a class="navbar-brand" style="margin-top: 10px;">Infinity</a>
+                </p>
+                <p>
+                    Peace love and <mark>Infinity</mark> since 2001.
+                </p>
             </div>
-            <!--./socials-->
+        </div>
+        <!--./navbar-brand-->
+
+        <!--Footer Divider-->
+        <hr class="footer-divider">
+        <!--./footer-divider-->
 
         <!--Breadcrumb Nav-->
         <div class="row text-center align-items-center">
@@ -521,42 +517,51 @@
         </div>
         <!--./breadcrumb-nav-->
 
-
-        <!--Footer Divider-->
-        <hr class="footer-divider">
-        <!--./footer-divider-->
-
-    <!--Navbar Brand-->
-    <div class="container">
-        <div class="row text-center align-items-center">
+        <!--Socials-->
+        <div class="row">
             <div class="col-12">
-                <p> <i class="fas fa-infinity"></i>
-                    <a class="navbar-brand" style="margin-top: 10px;">Infinity</a>
-                </p>
-                <p>
-                    Peace love and <mark>Infinity</mark> since 2001.
-                </p>
+                <ul class="nav justify-content-center">
+                    <li class="social">
+                        <a class="footer-socials" href="https://www.twitter.com" target="_blank">
+                            <i class="fab fa-twitter-square" id="twitter"></i>
+                        </a>
+                    </li>
+                    <li class="social">
+                        <a class="footer-socials" href="https://www.facebook.com" target="_blank">
+                            <i class="fab fa-facebook-square" id="facebook"></i>
+                        </a>
+                    </li>
+                    <li class="social">
+                        <a class="footer-socials" href="https://www.instagram.com" target="_blank">
+                            <i class="fab fa-instagram-square" id="instagram"></i>
+                        </a>
+                    </li>
+                    <li class="social">
+                        <a class="footer-socials" href="https://www.pinterest.com" target="_blank">
+                            <i class="fab fa-pinterest" id="pinterest"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <!--./navbar-brand-->
-
+        <!--./socials-->
     </div>
 
 </footer>
 <!--./footer-->
 
-    <!--AOS-->
-    <script>
-        AOS.init();
-    </script>
-<!--./bootstrap-cdn-->
-
 <!--Scripts-->
 <!-- Bootstrap CDN jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-</script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+<!--./bootstrap-cdn-->
 
 <!--Responsive Navbar-->
 <script>
@@ -565,6 +570,11 @@
     });
 </script>
 <!--./responsive-navbar-->
+
+<!--AOS-->
+<script>
+    AOS.init();
+</script>
 
 </body>
 <!--./body-->
