Updated navbar links and review section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a class="nav-link" href="#schedule">Schedule</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#quotes">Quotes</a>
+                    <a class="nav-link" href="#reviews">Reviews</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
@@ -288,11 +288,11 @@
 
 <div class="container-fluid quotes-container">
     <!--Quotes-->
-    <section id="quotes" class="quotes">
+    <section id="reviews" class="reviews">
         <div class="row text-center">
             <div class="col-12 section-header" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
                 data-aos-duration="300">
-                <h2 class="section-header">Quotes</h2>
+                <h2 class="section-header">Customer Reviews</h2>
                 <hr>
                 <p>Want to know what our members have to say about Infinity? Check out these quotes!</p>
             </div>
@@ -300,7 +300,7 @@
         <div class="row text-center">
             <div class="col-xs-8 col-sm-4">
                 <!--First Card-->
-                <div class="card quote-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
+                <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
                     data-aos-duration="300">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
@@ -322,7 +322,7 @@
             <!--./first-card-->
             <div class="col-xs-8 col-sm-4">
                 <!--Second Card-->
-                <div class="card quote-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
+                <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
                     data-aos-duration="300">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
@@ -345,7 +345,7 @@
             <!--Grid for card deck-->
             <div class="col-xs-8 col-sm-4">
                 <!--Third Card-->
-                <div class="card quote-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
+                <div class="card review-card h-100" data-aos="fade-up" data-aos-anchor-placement="center-bottom"
                     data-aos-duration="300">
                     <div class="card-top top-color"></div>
                     <div class="avatar mx-auto white">
@@ -371,7 +371,6 @@
 </div>
 </div>
 <!--./quotes-container-->
-
 
 <!--Contact Container-->
 <div class="container-wrapper-contact">
