Repaired merge conflicts in 404 error page

--- a/404.html
+++ b/404.html
@@ -94,17 +94,21 @@
 		</div>
 	</div>
 
-<!--Footer-->
-<footer class="text-center">
-    <a href="#myPage" title="To Top">
-        <i class="fas fa-chevron-up"></i>
-    </a>
-    <h6>2020 Alissa Troiano | Code Institute Project</h6>
-    <div class="footer-social">
-        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        <a href="https://www.pinterest.com" target="_blank"><i class="fab fa-pinterest"></i></a>
-        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram-square"></i></a>
+<!--Footer Section-->
+<footer>
+<!--Navbar Brand-->
+    <div class="container">
+        <div class="row text-center align-items-center">
+            <div class="col-12">
+                <p> <i class="fas fa-infinity"></i>
+                    <a class="navbar-brand" style="margin-top: 10px;">Infinity</a>
+                </p>
+                <p>
+                    Peace love and <mark>Infinity</mark> since 2001.
+                </p>
+            </div>
+        </div>
+        <!--./navbar-brand-->
     </div>
 </footer>
 <!--./footer-->
