--- a/index.html
+++ b/index.html
@@ -570,6 +570,16 @@
 </script>
 <!--./responsive-navbar-->
 
+<!-- Override Bootstrap to style navbar. Solution script found on https://stackoverflow.com/questions/36105119/bootstrap-change-navbar-active-background-color?answertab=active#tab-top and copied from https://jsfiddle.net/g2ys46qo/2/  -->
+<script>
+    let selector = 'nav li';
+    $(selector).on('click', function(){
+    $(selector).removeClass('active');
+    $(this).addClass('active');
+});
+</script>
+<!--./override-bootstrap -->
+
 <!--AOS-->
 <script>
     AOS.init();
